Fix alignemt

--- a/text-animation.css
+++ b/text-animation.css
@@ -62,7 +62,7 @@ body {
 }
 .content__container__list {
   margin-top: 0;
-  padding-left: 80px;
+  padding-left: 160px;
   text-align: left;
   list-style: none;
   -webkit-animation-name: change;
